Bug Fix And Implements News API
Fixes a few bug related to the Email field exist in both the User repository and the Seeker repository.
Implement the News API (It Is set to be public for testing purpose for now)